# SkillProof_Dao

./: .gitignore  Anchor.toml  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.server.json
programs/skillproof/: Cargo.toml
programs/skillproof/src/: lib.rs
public/: skillproof-dao-showcase.html
scripts/: clean-next.mjs
server/: data.ts  index.ts
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/badges/: page.tsx
src/app/gobernanza/: page.tsx
src/app/mentores/: page.tsx
src/app/proyectos/: page.tsx
src/app/showcase/: page.tsx
src/app/validar/: page.tsx
src/components/: LoadingState.tsx  PageShell.tsx  SiteHeader.tsx  StatusStrip.tsx
src/components/pages/: BadgesPage.tsx  GovernancePage.tsx  HomePage.tsx  MentorsPage.tsx  ProjectsPage.tsx  ValidatePage.tsx
src/hooks/: useBootstrapData.ts  useClusterStats.ts  useSkillproofAnchor.ts
src/lib/: api.ts  format.ts  productContent.ts  solanaProgram.ts
src/lib/idl/: skillproof.ts
