[package]
name = "skillproof"
version = "0.1.0"
description = "SkillProof DAO reputation protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "skillproof"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
